tri1078 -- Search results now mark up soft-deleted records differently. Also, a fix to migration 15 that wraps failures creating plsql in a begin/rescue block so failures there don't break tasks. UAT for tri1078 to follow.
git-svn-id: https://trisano.csinitiative.net/svn/trisano/top-level/trunk@1866 b21a84b9-e453-0410-92a3-c4f515f7ae45

--- a/trisano/webapp/public/stylesheets/event.css
+++ b/trisano/webapp/public/stylesheets/event.css
@@ -12,6 +12,18 @@
   padding: 3px 3px 3px 9px;
   color: #191970; }
 
+.search-active td {
+  border: 1px solid #C1DAD7;
+  background: #fff;
+  padding: 3px 3px 3px 9px;
+  color: #191970; }
+
+.search-inactive td {
+  border: 1px solid #C1DAD7;
+  background: #ededed;
+  padding: 3px 3px 3px 9px;
+  color: #191970; }
+
 .diseaselist {
   border: none;
   border-width: 0px 0px 0px 0px; }
@@ -28,40 +40,6 @@
   padding: 6px 0px 3px 0px; }
 
 .patientname-inactive {
-  font-family: helvetica, sans-serif;
-  font-size: 18px;
-  font-weight: light;
-  font-style: italic;
-  color: #ccc;
-  letter-spacing: 0px;
-  padding: 6px 0px 3px 0px; }
-  
- .contactname {
-  font-family: helvetica, sans-serif;
-  font-size: 18px;
-  font-weight: light;
-  color: #333;
-  letter-spacing: 0px;
-  padding: 6px 0px 3px 0px; }
-
-.contactname-inactive {
-  font-family: helvetica, sans-serif;
-  font-size: 18px;
-  font-weight: light;
-  font-style: italic;
-  color: #ccc;
-  letter-spacing: 0px;
-  padding: 6px 0px 3px 0px; }
-  
- .placename {
-  font-family: helvetica, sans-serif;
-  font-size: 18px;
-  font-weight: light;
-  color: #333;
-  letter-spacing: 0px;
-  padding: 6px 0px 3px 0px; }
-
-.placename-inactive {
   font-family: helvetica, sans-serif;
   font-size: 18px;
   font-weight: light;
